<resources>
    <string name="title_edittext">Edit text preference</string>
    <string name="summary_edittext">An example that uses an edit text dialog</string>
    <string name="title_edittext_dialog">Enter your favorite animal</string>
    <string name="title_checkbox">Checkbox preference</string>
    <string name="summary_checkbox">This is a checkbox</string>
    <string name="app_name">project5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list">An example that uses a list dialog</string>
    <string name="title_list_dialog">Choose one</string>
    <string name="title_screen">Screen preference</string>
    <string name="summary_screen">Shows another screen of preferences</string>
    <string name="title_fragment">Fragment preference</string>
    <string name="summary_fragment">Shows another fragment of preferences</string>
    <string name="title_nextscreen">Toggle preference</string>
    <string name="summary_nextscreen">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent">Intent preference</string>
    <string name="summary_intent">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my">This is a custom counter preference</string>
    <string name="title_toggle_preference">Haunted preference</string>
    <string name="summary_on">I\'m on! :)</string>
    <string name="summary_off">I\'m off! :(</string>
    <string name="title_parent">Parent checkbox preference</string>
    <string name="summary_parent">This is visually a parent</string>
    <string name="title_child">Child checkbox preference</string>
    <string name="summary_child">This is visually a child</string>
</resources>
